# data-manifest

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
